# mlb_stats_util

./: AGENTS.md  pyproject.toml
.github/workflows/: build_package.yaml
mlb_stats_util/: __init__.py  get_detailed_batter_stats.py  get_detailed_pitcher_stats.py  get_team_stats.py
src/: get_detailed_pitcher_stats.py
